Add XGBoost prediction

--- a/notebooks/ai-gutta.ipynb
+++ b/notebooks/ai-gutta.ipynb
@@ -959,6 +959,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "target      int64\n",
+       "f0        float64\n",
+       "f1         object\n",
+       "f2        float64\n",
+       "f3        float64\n",
+       "f4        float64\n",
+       "f5        float64\n",
+       "f6        float64\n",
+       "f7        float64\n",
+       "f8        float64\n",
+       "f9         object\n",
+       "f10       float64\n",
+       "f11       float64\n",
+       "f12       float64\n",
+       "f13       float64\n",
+       "f14       float64\n",
+       "f15       float64\n",
+       "f16       float64\n",
+       "f17       float64\n",
+       "f18       float64\n",
+       "f19       float64\n",
+       "f20       float64\n",
+       "f21       float64\n",
+       "f22        object\n",
+       "f23       float64\n",
+       "f24       float64\n",
+       "f25       float64\n",
+       "f26       float64\n",
+       "f27       float64\n",
+       "f28       float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_data.dtypes"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1488,13 +1538,13 @@
     "\n",
     "# X_train, X_validation, y_train, y_validation = train_test_split(X, y, train_size=0.75, random_state=42)\n",
     "\n",
-    "catboost = CatBoostClassifier(\n",
+    "catboost_model = CatBoostClassifier(\n",
     "    custom_loss=[metrics.Accuracy()],\n",
     "    random_seed=42,\n",
     "    logging_level='Silent'\n",
     ")\n",
     "\n",
-    "catboost.fit(\n",
+    "catboost_model.fit(\n",
     "    X_catboost, y,\n",
     "    cat_features=categorical_features_indices,\n",
     "    # eval_set=(X_validation, y_validation),\n",
@@ -1564,37 +1614,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'X_encoded' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_22644/1897115494.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mX_xgboost\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_dummies\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcategorical_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mX_encoded\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'X_encoded' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# XGBoost requires only numerical features\n",
     "# One-hot encode categorical features\n",
-    "categorical_features = ['f0', 'f1', 'f2', 'f4', 'f8', 'f9', 'f10', 'f12', 'f13', 'f14', 'f15', 'f18', 'f22', 'f23', 'f25', 'f26']\n",
+    "categorical_features = ['f1', 'f9', 'f22']\n",
     "\n",
     "X_xgboost = pd.get_dummies(X, columns=categorical_features)\n",
-    "X_xgboost.head()"
+    "X_test_xgboost = pd.get_dummies(X_test, columns=categorical_features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/nicklas/repos/artificial-intelligence/tdt05/venv/lib/python3.8/site-packages/xgboost/sklearn.py:1146: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n",
+      "/home/nicklas/repos/artificial-intelligence/tdt05/venv/lib/python3.8/site-packages/sklearn/preprocessing/_label.py:98: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "/home/nicklas/repos/artificial-intelligence/tdt05/venv/lib/python3.8/site-packages/sklearn/preprocessing/_label.py:133: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[16:50:43] WARNING: ../src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "Accuracy: 87.24%\n"
+     ]
+    }
+   ],
    "source": [
-    "from xgboost import XGBClassifier"
+    "from xgboost import XGBClassifier\n",
+    "\n",
+    "xgboost_model = XGBClassifier()\n",
+    "xgboost_model.fit(X_xgboost, y)\n",
+    "\n",
+    "predictions = xgboost_model.predict(X_xgboost)\n",
+    "accuracy = accuracy_score(y, predictions)\n",
+    "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))"
    ]
   },
   {
@@ -1610,14 +1676,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = catboost.predict(X_test_catboost, prediction_type='Probability')\n",
-    "predictions = pd.DataFrame({'id': X_test_catboost.index, 'target': y_pred[:,1]})\n",
+    "# CatBoost\n",
+    "# y_pred = catboost_model.predict(X_test_catboost, prediction_type='Probability')\n",
+    "# predictions = pd.DataFrame({'id': X_test_catboost.index, 'target': y_pred[:,1]})\n",
     "\n",
-    "predictions.to_csv('../output/catboost.txt', index=False)"
+    "# predictions.to_csv('../output/catboost.txt', index=False)\n",
+    "\n",
+    "\n",
+    "# XGBoost\n",
+    "y_pred = xgboost_model.predict_proba(X_test_xgboost)\n",
+    "predictions = pd.DataFrame({'id': X_test_xgboost.index, 'target': y_pred[:,1]})\n",
+    "\n",
+    "predictions.to_csv('../output/xgboost.txt', index=False)"
    ]
   },
   {
