--- a/notebooks/ai-gutta.ipynb
+++ b/notebooks/ai-gutta.ipynb
@@ -1159,7 +1159,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hyperparameter tuning (CatBoost)"
+    "## Hyperparameter tuning (CatBoost)\n",
+    "For the CatBoost predictor, we use a randomized search in order to try to find some \"areas\" of potential optimal settings.  \n",
+    "There are very many potential hyperparameters that can be tuned, but we have decided to focus only on those who have been considered the most important in other similar experiments."
    ]
   },
   {
@@ -1207,6 +1209,13 @@
     ")\n",
     "\n",
     "catboost_hyperparameters.fit(X_catboost, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then list what hyperparameters gave the best results in the randomized search:"
    ]
   },
   {
@@ -1260,7 +1269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using a SHapley Additive exPlanations (SHAP) plot to assign an importance value to each feature for a given prediction."
+    "In order to explain the model, we are using a SHapley Additive exPlanations (SHAP) plot to assign an importance value to each feature for a given prediction."
    ]
   },
   {
@@ -1269,10 +1278,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sorted_feature_importance = catboost_model.get_feature_importance().argsort()\n",
-    "# explainer = shap.TreeExplainer(catboost_model)\n",
-    "# shap_values = explainer.shap_values(X_test_catboost)\n",
-    "# shap.summary_plot(shap_values, X_test_catboost, feature_names=feature_importance.index, max_display=X_test_catboost.shape[1])"
+    "sorted_feature_importance = catboost_model.get_feature_importance()\n",
+    "explainer = shap.TreeExplainer(catboost_model)\n",
+    "shap_values = explainer.shap_values(X_test_catboost)\n",
+    "shap.summary_plot(shap_values, X_test_catboost, feature_names=feature_importance.index, max_display=X_test_catboost.shape[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From this plot, we can see that **f13** has a considerable impact on both the increase and decrease in predicted value, compared to other functions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO: things that should be cleaned up / removed:"
    ]
   },
   {
@@ -1380,10 +1403,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "37c8a2de656be8ca1d97a9c7d50c80471430111670512576e74e7e519fff4ab7"
+   "hash": "513b337271411f4177ffe921e09c301a07e873c12860d03f0dc956891b1178ea"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('venv': venv)",
+   "display_name": "Python 3.8.6 64-bit ('venv': venv)",
    "name": "python3"
   },
   "language_info": {
@@ -1396,7 +1419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
