--- a/notebooks/catboost.ipynb
+++ b/notebooks/catboost.ipynb
@@ -33,7 +33,9 @@
       "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from matplotlib->catboost) (1.3.2)\n",
       "Requirement already satisfied: pillow>=6.2.0 in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from matplotlib->catboost) (8.3.2)\n",
       "Requirement already satisfied: cycler>=0.10 in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from matplotlib->catboost) (0.10.0)\n",
-      "Requirement already satisfied: tenacity>=6.2.0 in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from plotly->catboost) (8.0.1)\n"
+      "Requirement already satisfied: tenacity>=6.2.0 in /Users/magnus/repos/TDT05-classification-project/venv/lib/python3.8/site-packages (from plotly->catboost) (8.0.1)\n",
+      "\u001b[33mWARNING: You are using pip version 21.1.1; however, version 21.3 is available.\n",
+      "You should consider upgrading via the '/Users/magnus/repos/TDT05-classification-project/venv/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,9 +63,384 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "      <th>f0</th>\n",
+       "      <th>f1</th>\n",
+       "      <th>f2</th>\n",
+       "      <th>f3</th>\n",
+       "      <th>f4</th>\n",
+       "      <th>f5</th>\n",
+       "      <th>f6</th>\n",
+       "      <th>f7</th>\n",
+       "      <th>f8</th>\n",
+       "      <th>...</th>\n",
+       "      <th>f19</th>\n",
+       "      <th>f20</th>\n",
+       "      <th>f21</th>\n",
+       "      <th>f22</th>\n",
+       "      <th>f23</th>\n",
+       "      <th>f24</th>\n",
+       "      <th>f25</th>\n",
+       "      <th>f26</th>\n",
+       "      <th>f27</th>\n",
+       "      <th>f28</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>gL</td>\n",
+       "      <td>e</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>96ae67d3e</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>328b0cf4e</td>\n",
+       "      <td>0.834041</td>\n",
+       "      <td>T</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.2364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Rj</td>\n",
+       "      <td>c</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>9fcf422f2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>328b0cf4e</td>\n",
+       "      <td>0.686021</td>\n",
+       "      <td>T</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>In</td>\n",
+       "      <td>a</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>a5adff44e</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>G</td>\n",
+       "      <td>0c67fcbbd</td>\n",
+       "      <td>1.141271</td>\n",
+       "      <td>T</td>\n",
+       "      <td>N</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>rA</td>\n",
+       "      <td>c</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>15c90ab2e</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>G</td>\n",
+       "      <td>fee4e3007</td>\n",
+       "      <td>0.662382</td>\n",
+       "      <td>T</td>\n",
+       "      <td>N</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>pE</td>\n",
+       "      <td>c</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>b36490559</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>B</td>\n",
+       "      <td>587e040bd</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>T</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>13.9537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49995</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>tT</td>\n",
+       "      <td>d</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4fcf21245</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>72ccba7a4</td>\n",
+       "      <td>0.890576</td>\n",
+       "      <td>T</td>\n",
+       "      <td>N</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>14.0466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49996</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>pB</td>\n",
+       "      <td>b</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>8f926e828</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>250eea49d</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.0157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49997</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>TL</td>\n",
+       "      <td>e</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>474e5d6c8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>G</td>\n",
+       "      <td>110d4786e</td>\n",
+       "      <td>1.327592</td>\n",
+       "      <td>T</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>13.9255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49998</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Bx</td>\n",
+       "      <td>a</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>a5cd0b6cb</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>0dcf409af</td>\n",
+       "      <td>0.842615</td>\n",
+       "      <td>T</td>\n",
+       "      <td>S</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.3062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49999</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Pw</td>\n",
+       "      <td>f</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>c4249a828</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>G</td>\n",
+       "      <td>098d9fef5</td>\n",
+       "      <td>0.996243</td>\n",
+       "      <td>F</td>\n",
+       "      <td>N</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>50000 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       target   f0  f1 f2   f3   f4    f5   f6   f7         f8  ...  f19  f20  \\\n",
+       "id                                                              ...             \n",
+       "0           0  1.0  gL  e  3.0    A   NaN  0.0  6.0  96ae67d3e  ...  0.5  0.0   \n",
+       "1           0  0.0  Rj  c  1.0    A   7.0  1.0  4.0  9fcf422f2  ...  0.4  0.0   \n",
+       "2           0  NaN  In  a  1.0    A  10.0  1.0  6.0  a5adff44e  ...  0.5  1.0   \n",
+       "3           1  1.0  rA  c  3.0    A   7.0  1.0  1.0  15c90ab2e  ...  0.6  1.0   \n",
+       "4           0  1.0  pE  c  3.0    A   7.0  0.0  6.0  b36490559  ...  0.5  0.0   \n",
+       "...       ...  ...  .. ..  ...  ...   ...  ...  ...        ...  ...  ...  ...   \n",
+       "49995       1  0.0  tT  d  3.0  NaN  11.0  0.0  1.0  4fcf21245  ...  0.6  1.0   \n",
+       "49996       0  1.0  pB  b  2.0    A   7.0  0.0  6.0  8f926e828  ...  0.1  0.0   \n",
+       "49997       0  0.0  TL  e  1.0    A  11.0  0.0  6.0  474e5d6c8  ...  NaN  0.0   \n",
+       "49998       0  0.0  Bx  a  1.0    A   7.0  1.0  4.0  a5cd0b6cb  ...  0.4  0.0   \n",
+       "49999       0  0.0  Pw  f  1.0    A  10.0  0.0  6.0  c4249a828  ...  NaN  1.0   \n",
+       "\n",
+       "       f21  f22        f23       f24 f25  f26  f27      f28  \n",
+       "id                                                           \n",
+       "0      3.0    R  328b0cf4e  0.834041   T    N  1.0  14.2364  \n",
+       "1      1.0  NaN  328b0cf4e  0.686021   T    N  1.0      NaN  \n",
+       "2      3.0    G  0c67fcbbd  1.141271   T    N  3.0      NaN  \n",
+       "3      1.0    G  fee4e3007  0.662382   T    N  3.0      NaN  \n",
+       "4      1.0    B  587e040bd -1.000000   T    N  1.0  13.9537  \n",
+       "...    ...  ...        ...       ...  ..  ...  ...      ...  \n",
+       "49995  1.0    R  72ccba7a4  0.890576   T    N  3.0  14.0466  \n",
+       "49996  7.0    R  250eea49d       NaN   T    N  1.0  14.0157  \n",
+       "49997  7.0    G  110d4786e  1.327592   T    N  1.0  13.9255  \n",
+       "49998  3.0    R  0dcf409af  0.842615   T    S  1.0  14.3062  \n",
+       "49999  5.0    G  098d9fef5  0.996243   F    N  3.0      NaN  \n",
+       "\n",
+       "[50000 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Loading the data\n",
     "training_data = pd.read_csv('../input/tdt05-2021-challenge-2/challenge2_train.csv', index_col=0)\n",
@@ -73,9 +450,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows removed: 2703\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/x0/3_dctplx2qz9mcytvtkt1d4m0000gn/T/ipykernel_31588/1647017917.py:9: FutureWarning: Automatic reindexing on DataFrame vs Series comparisons is deprecated and will raise ValueError in a future version.  Do `left, right = left.align(right, axis=1, copy=False)` before e.g. `left == right`\n",
+      "  training_data = training_data[~(training_data > (Q3 + 1.5 * IQR)).any(axis=1)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Outlier removal by interquartile range (IQR) method\n",
     "interval_features = ['f11', 'f17', 'f24', 'f28']\n",
@@ -93,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,9 +512,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns removed: 0\n"
+     ]
+    }
+   ],
    "source": [
     "# Feature dropping\n",
     "dropped_features = []\n",
@@ -136,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,9 +548,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training started...\n"
+     ]
+    }
+   ],
    "source": [
     "# Training\n",
     "categorical_feature_indices_after_dropping = [0, 1, 2, 4, 6, 8, 9, 10, 12, 13, 14, 15, 18, 20, 22, 23, 25, 26]\n",
