Update Stacking code

--- a/notebooks/ai-gutta.ipynb
+++ b/notebooks/ai-gutta.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 129,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-10-11T09:48:35.033793Z",
@@ -75,8 +75,7 @@
     "from sklearn.ensemble import StackingClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.model_selection import RandomizedSearchCV\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import RandomizedSearchCV, train_test_split, KFold\n",
     "\n",
     "print('Tensorflow version:', tf.__version__)\n",
     "\n",
@@ -2838,6 +2837,64 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Utility functions\n",
+    "\n",
+    "Useful functions for converting back and forth between feature names (e.g. 'f10') to indices (e.g. 10) and recomputing these if any features has been dropped."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Utility function to go from, e.g. 'f10' to 10\n",
+    "def features_to_indices(features):\n",
+    "    return [int(column.replace('f', '')) for column in features]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Utility function to go from, e.g. 10 to 'f10\n",
+    "def indices_to_features(indices):\n",
+    "    return [f'f{index}' for index in indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-10-11T09:48:49.451212Z",
+     "iopub.status.busy": "2021-10-11T09:48:49.450927Z",
+     "iopub.status.idle": "2021-10-11T09:48:49.457259Z",
+     "shell.execute_reply": "2021-10-11T09:48:49.456346Z",
+     "shell.execute_reply.started": "2021-10-11T09:48:49.451184Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Utility function for computing the new indices after dropping certain columns\n",
+    "def indices_after_droping(indices, dropped_columns):\n",
+    "    updated_indices = list(indices)\n",
+    "    dropped_indices = features_to_indices(dropped_columns)\n",
+    "    \n",
+    "    for i, old_index in enumerate(indices):\n",
+    "        for column_index in dropped_indices:\n",
+    "            if old_index >= column_index:\n",
+    "                updated_indices[i] -= 1\n",
+    "\n",
+    "    return updated_indices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "editable": false
    },
@@ -3175,62 +3232,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Utility functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Utility function to go from, e.g. 'f10' to 10\n",
-    "def features_to_indices(features):\n",
-    "    return [int(column.replace('f', '')) for column in features]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Utility function to go from, e.g. 10 to 'f10\n",
-    "def indices_to_features(indices):\n",
-    "    return [f'f{index}' for index in indices]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-10-11T09:48:49.451212Z",
-     "iopub.status.busy": "2021-10-11T09:48:49.450927Z",
-     "iopub.status.idle": "2021-10-11T09:48:49.457259Z",
-     "shell.execute_reply": "2021-10-11T09:48:49.456346Z",
-     "shell.execute_reply.started": "2021-10-11T09:48:49.451184Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Utility function for computing the new indices after dropping certain columns\n",
-    "def indices_after_droping(indices, dropped_columns):\n",
-    "    updated_indices = list(indices)\n",
-    "    dropped_indices = features_to_indices(dropped_columns)\n",
-    "    \n",
-    "    for i, old_index in enumerate(indices):\n",
-    "        for column_index in dropped_indices:\n",
-    "            if old_index >= column_index:\n",
-    "                updated_indices[i] -= 1\n",
-    "\n",
-    "    return updated_indices"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 100,
    "metadata": {},
@@ -3353,6 +3354,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training CatBoost regressor\n",
+    "\n",
+    "We would like to se if using regression instead of classification could be beneficial."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 123,
    "metadata": {},
@@ -3382,7 +3392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -3398,7 +3408,7 @@
        "<AxesSubplot:xlabel='feature_importance'>"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3426,16 +3436,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Stacking several CatBoosts together\n",
-    "# TODO\n",
-    "# catboost_dropped_indices = features_to_indices(catboost_dropped_features)\n",
-    "# categorical_features_indices = [index for index in categorical_features_indices if index not in catboost_dropped_indices]\n",
-    "# categorical_features_indices_after_dropping = indices_after_droping(categorical_features_indices, catboost_dropped_features)\n",
-    "# print(categorical_features_indices_after_dropping)\n",
+    "# data_y, data_yhat = [], []\n",
+    "# k_fold = KFold(n_splits=10, shuffle=True, random_state=RANDOM_SEED)\n",
+    "\n",
+    "# print(X_catboost.shape)\n",
+    "# print(len(list(zip(*k_fold.split(X_catboost)))[0][0]) + len(list(zip(*k_fold.split(X_catboost)))[1][0]))\n",
+    "# print(sum([42567, 42567, 42567, 42567, 42567, 42567, 42567, 42568, 42568, 42568]))\n",
+    "\n",
+    "# for train_ix, test_ix in k_fold.split(X_catboost):\n",
+    "# \tprint(train_ix.shape)\n",
+    "\n",
+    "\t\n",
+    "\t# train_X, test_X = X_catboost.iloc[train_ix], X_catboost.iloc[test_ix]\n",
+    "\t# train_y, test_y = y.iloc[train_ix], y.iloc[test_ix]\n",
+    "\n",
+    "\t# model = CatBoostClassifier(\n",
+    "\t# \tcat_features=categorical_features_indices_after_dropping,\n",
+    "\t# \tcustom_loss=[metrics.Accuracy()],\n",
+    "\t# \trandom_seed=RANDOM_SEED,\n",
+    "\t# \tlogging_level='Silent'\n",
+    "\t# )\n",
+    "\t# model.fit(train_X, train_y)\n",
+    "\n",
+    "\t# yhat = model.predict(test_X)\n",
+    "\n",
+    "\t# data_y.extend(test_y)\n",
+    "\t# data_yhat.extend(yhat)\n",
+    "\n",
+    "# acc = accuracy_score(data_y, data_yhat)\n",
+    "# print('Accuracy: %.3f' % (acc))\n",
     "\n",
     "# estimators = [\n",
     "#     ('classifier_vanilla', CatBoostClassifier(\n",
@@ -3683,7 +3717,8 @@
    "hash": "37c8a2de656be8ca1d97a9c7d50c80471430111670512576e74e7e519fff4ab7"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('venv': venv)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
