--- a/notebooks/ai-gutta.ipynb
+++ b/notebooks/ai-gutta.ipynb
@@ -76,6 +76,8 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.model_selection import RandomizedSearchCV, train_test_split, KFold\n",
+    "from sklearn.metrics import ConfusionMatrixDisplay\n",
+    "\n",
     "\n",
     "print('Tensorflow version:', tf.__version__)\n",
     "\n",
@@ -3662,7 +3664,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to explain the model, we are using a SHapley Additive exPlanations (SHAP) plot to assign an importance value to each feature for a given prediction."
+    "### SHAP values / feature importance\n",
+    "In order to explain the model, we are using a SHapley Additive exPlanations (SHAP) plot to assign an importance value to each feature for a given prediction. By using a summarizing plot for all features, we obtain a feature importance plot. In this plot, red values represent an increase in feature value while blue values represent a decrease. When a value has a negative SHAP value (to the left of 0.0) this represents a decrease in target value, while a positive SHAP value represents an increase in target value"
    ]
   },
   {
@@ -3673,15 +3676,40 @@
    "source": [
     "sorted_feature_importance = catboost_model.get_feature_importance()\n",
     "explainer = shap.TreeExplainer(catboost_model)\n",
-    "shap_values = explainer.shap_values(X_test_catboost)\n",
-    "shap.summary_plot(shap_values, X_test_catboost, feature_names=feature_importance.index, max_display=X_test_catboost.shape[1])"
+    "shap_values = explainer.shap_values(X_test)\n",
+    "shap.summary_plot(shap_values, X_test, max_display=X_test.shape[1])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From this plot, we can see that **f13** has a considerable impact on both the increase and decrease in predicted value, compared to other functions."
+    "Most of the features in the dataset are gray in this plot, as they are not numeric features with defined «high» and «low» values. Some of them, like f13, could be converted to numeric in order to get an ordinal property and thus get further information (through coloring) in this plot. However, in the feature engineering phase, ww discovered that converting these properties to numeric only worsened the accuracy of the model, and this is therefore left out of this plot as well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ConfusionMatrixDisplay.from_estimator(catboost_model, X, y)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By observing the output of the confusion matrix, we can conclude with some findings:\n",
+    "The model mostly predicts the correct value for rows with a 0 as the target, with only a marginal amount of erros. For rows with 1 a the target however, the model actually has an error rate of almost 80%. This is not that surprising as the dataset is very imbalanced, with a 80/20 split of 0 and 1 valued targets respectively, as we identified in the EDA section. "
    ]
   },
   {
