--- a/notebooks/ai-gutta.ipynb
+++ b/notebooks/ai-gutta.ipynb
@@ -3558,6 +3558,8 @@
    "metadata": {},
    "source": [
     "## Hyperparameter tuning (CatBoost)\n",
+    "It is important to do hyperparameter tuning when training a machine learning model as these can have a great impact on both training time and accuracy. Doing proper hyperparameter tuning can help avoid local minima/maxima in both accuracy and loss. We also attempt to avoid overfitting the model by using earlystopping and a validation dataset. Earlystopping is a technique wherein the model is tested on some unseen validation data continuously during training. The model is not trained on the validation data, and thus it is possible to identify when the model stops being more accurate for _unseen_ data, even though it may still be improving for the data it is itself trained on. \n",
+    "\n",
     "For the CatBoost predictor, we use a randomized search in order to try to find some \"areas\" of potential optimal settings.  \n",
     "There are very many potential hyperparameters that can be tuned, but we have decided to focus only on those who have been considered the most important in other similar experiments."
    ]
@@ -3603,7 +3605,7 @@
     "    return_train_score=True\n",
     ")\n",
     "\n",
-    "catboost_hyperparameters.fit(X_catboost, y)"
+    "catboost_hyperparameters.fit(X_catboost, y, od_type=\"Iter\")"
    ]
   },
   {
@@ -3651,6 +3653,13 @@
     "# predictions = pd.DataFrame({'id': X_test_xgboost.index, 'target': y_pred[:,1]})\n",
     "\n",
     "# predictions.to_csv('../output/xgboost.txt', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Even though we tried to do hyperparameter tuning, we could unfortunately not identify any particular configuration of hyperparameters in our search that performed any better than the default parameters that Catboost chooses out of the box. Disappointingly, using earlystopping and a validation set did not improve the accuracy of the model either, and we therefore decided to use only out of the box configurations for Catboost, as any further attempts to improve the model with typical techniques only worsened the model."
    ]
   },
   {
