--- a/notebooks/ai-gutta.ipynb
+++ b/notebooks/ai-gutta.ipynb
@@ -3558,9 +3558,11 @@
    "metadata": {},
    "source": [
     "## Hyperparameter tuning (CatBoost)\n",
-    "It is important to do hyperparameter tuning when training a machine learning model as these can have a great impact on both training time and accuracy. Doing proper hyperparameter tuning can help avoid local minima/maxima in both accuracy and loss. We also attempt to avoid overfitting the model by using earlystopping and a validation dataset. Earlystopping is a technique wherein the model is tested on some unseen validation data continuously during training. The model is not trained on the validation data, and thus it is possible to identify when the model stops being more accurate for _unseen_ data, even though it may still be improving for the data it is itself trained on. \n",
+    "It is important to do hyperparameter tuning when training a machine learning model as these can have a great impact on both training time and accuracy. Doing proper hyperparameter tuning can help avoid local minima/maxima in both accuracy and loss. \n",
     "\n",
-    "For the CatBoost predictor, we use a randomized search in order to try to find some \"areas\" of potential optimal settings.  \n",
+    "We attempted to avoid overfitting the model by using earlystopping and a validation dataset. Earlystopping is a technique wherein the model is tested on some unseen validation data continuously during training. The model is not trained on the validation data, and thus it is possible to identify when the model stops being more accurate for _unseen_ data, even though it may still be improving for the data it is itself trained on. A technique that often performs better than this however, is to use K-fold cross validation, the model switches between what data is used as training and validation data continuously, in order to utilize more of the available data for training.\n",
+    "\n",
+    "For the CatBoost predictor, we therefore use a randomized search with cross-validation in order to try to find some \"areas\" of potential optimal settings.  \n",
     "There are very many potential hyperparameters that can be tuned, but we have decided to focus only on those who have been considered the most important in other similar experiments."
    ]
   },
@@ -3590,14 +3592,14 @@
     "    'iterations': [80, 100, 120, 140, 160],\n",
     "    'learning_rate': [0.03, 0.1, 0.2],\n",
     "    'depth': [2, 4, 6, 8],\n",
-    "    'l2_leaf_reg': [0.2, 0.5, 1, 3]\n",
+    "    'l2_leaf_reg': [0.2, 0.5, 1, 1.5, 2, 2.5, 3]\n",
     "}\n",
     "\n",
     "catboost_hyperparameters = RandomizedSearchCV(\n",
     "    estimator=catboost_model, \n",
     "    param_distributions=hyperparameters, \n",
-    "    n_iter=20, \n",
-    "    scoring='neg_mean_absolute_error', \n",
+    "    n_iter=30, \n",
+    "    scoring='accuracy',\n",
     "    cv=3, \n",
     "    verbose=2, \n",
     "    random_state=42, \n",
@@ -3605,7 +3607,7 @@
     "    return_train_score=True\n",
     ")\n",
     "\n",
-    "catboost_hyperparameters.fit(X_catboost, y, od_type=\"Iter\")"
+    "catboost_hyperparameters.fit(X_catboost, y)"
    ]
   },
   {
@@ -3659,7 +3661,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Even though we tried to do hyperparameter tuning, we could unfortunately not identify any particular configuration of hyperparameters in our search that performed any better than the default parameters that Catboost chooses out of the box. Disappointingly, using earlystopping and a validation set did not improve the accuracy of the model either, and we therefore decided to use only out of the box configurations for Catboost, as any further attempts to improve the model with typical techniques only worsened the model."
+    "Even though we tried to do hyperparameter tuning, we could unfortunately not identify any particular configuration of hyperparameters in our search that performed any better than the default parameters that Catboost chooses out of the box. We therefore decided to use only out of the box configurations for Catboost, as any further attempts to improve the model with typical techniques only worsened the model."
    ]
   },
   {
