--- a/notebooks/ai-gutta.ipynb
+++ b/notebooks/ai-gutta.ipynb
@@ -3593,7 +3593,7 @@
    "metadata": {},
    "source": [
     "By observing the output of the confusion matrix, we can conclude with some findings:\n",
-    "The model mostly predicts the correct value for rows with a 0 as the target, with only a marginal amount of erros. For rows with 1 a the target however, the model actually has an error rate of almost 80%. This is not that surprising as the dataset is very imbalanced, with a 80/20 split of 0 and 1 valued targets respectively, as we identified in the EDA section. "
+    "The model mostly predicts the correct value for rows with a 0 as the target, with only a marginal amount of errors. For rows with 1 the target however, the model actually has an error rate of almost 80%. This is not that surprising as the dataset is very imbalanced, with a 80/20 split of 0 and 1 valued targets respectively, as we identified in the EDA section. "
    ]
   },
   {
