--- a/notebooks/ai-gutta.ipynb
+++ b/notebooks/ai-gutta.ipynb
@@ -3517,7 +3517,7 @@
    "outputs": [],
    "source": [
     "# CatBoost\n",
-    "y_pred = catboost_model.predict(X_test_catboost, prediction_type='Probability')\n",
+    "y_pred = catboost_hyperparameters.predict_proba(X_test_catboost)\n",
     "predictions = pd.DataFrame({'id': X_test_catboost.index, 'target': y_pred[:,1]})\n",
     "\n",
     "predictions.to_csv('../output/catboost.txt', index=False)\n",
