--- a/notebooks/ai-gutta.ipynb
+++ b/notebooks/ai-gutta.ipynb
@@ -3480,7 +3480,7 @@
     "    return_train_score=True\n",
     ")\n",
     "\n",
-    "catboost_hyperparameters.fit(X_catboost, y)"
+    "catboost_hyperparameters.fit(X_catboost, y, use_best_model=True)"
    ]
   },
   {
